--- a/score.css
+++ b/score.css
@@ -4,94 +4,73 @@
     box-sizing: border-box;
     background-color: black;
     color: white;
+    font-family: sans-serif;
 }
 
-#container{
+#container {
     outline: 2px solid red;
-    width: 60vw;
-    height: 50vh;
-    margin: auto;
+    width: 50vw;
+    height: 55vh;
+    padding: 1%;
+    margin:2% auto;
     border-radius: 10px;
 }
 
-#container-image{
-    /* outline: 2px solid blue; */
-    /* % for I want it to depend on its parent container */
-    margin: 2% auto;
-    width: 90%;
+#container-image {
+    width: 100%;
     height: 50%;
     border-radius: 10px;
 }
 
-.image{
+.image {
     height: 100%;
     width: 100%;
     border-radius: 10px;
 }
 
-#container-score{
-    outline: 2px solid blue;
-    /* % for I want it to depend on its parent container */
-    margin: 2% auto;
+#container-score {
     padding: 2%;
-    /* font-size: 2rem; */
-    width: 90%;
-    height: 35%;
 }
 
-.score-content{
+.score-content {
     display: block;
     font-size: 1.2rem;
     font-weight: 500;
 }
 
-.select-score{
+.select-score {
     display: flex;
     align-items: center;
 }
 
-#container-buttons{
-    outline: 2px solid blue;
-    /* % for I want it to depend on its parent container */
+#win-score {
+    margin: 2%;
+    width: 15%;
+    border-radius: 5px;
+}
+
+#container-buttons {
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 2%;
     flex-wrap: wrap;
-    margin: 2% auto;
-    width: 90%;
-    height: 10%;
 }
 
-.btn{
+.player1,.player2{
+    font-size: 200%;
+}
+
+.btn {
     padding: 2%;
-    font-size: 1.5rem;
     border-radius: 10px;
+    font-size: 100%;
 }
 
-.player1{
-    font-size: 2rem;
-}
-
-.player2{
-    font-size: 2rem;
-}
-
-.select-score{
-    outline: 2px solid rgb(149, 97, 105);
-    margin: 2%;
-    display: flex;
-}
-
-#win-score{
-    outline: 2px solid green;
-    margin: 2%;
-}
-
-.winner{
+.winner {
     color: green;
 }
 
-.looser{
+.looser {
     color: red;
 }
